// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toolbar > renders with as correctly 1`] = `
"<section class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-default border border-default">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</section>"
`;

exports[`Toolbar > renders with center slot correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-default border border-default">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5">Center slot</div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`Toolbar > renders with class correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-default border-default border-0 border-b">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`Toolbar > renders with left slot correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-default border border-default">
  <div class="flex items-center gap-1.5">Left slot</div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`Toolbar > renders with right slot correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-default border border-default">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5">Right slot</div>
</div>"
`;

exports[`Toolbar > renders with title slot correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-default border border-default">
  <div class="flex items-center gap-1.5">
    <div class="text-base text-pretty truncate font-semibold text-highlighted px-3">Title slot</div>
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`Toolbar > renders with ui correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-default border border-default border-x-0">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`Toolbar > renders with variant outline correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-default border border-default">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`Toolbar > renders with variant soft correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-elevated/50">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`Toolbar > renders with variant solid correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-inverted text-inverted">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`Toolbar > renders with variant subtle correctly 1`] = `
"<div class="flex justify-between items-center shrink-0 no-wrap relative w-full px-3 gap-1.5 overflow-x-auto min-h-[49px] bg-elevated/50 border border-default">
  <div class="flex items-center gap-1.5">
    <!--v-if-->
  </div>
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;
